/************
 * Autor: Zavaleta Cruz Jonathan Alexis
 * fecha de creación: 15/05/2023
 * fecha modificación:
 * Descripcion: se creo la clase cliente
 * 
 */
package entity;


public class Cliente extends Persona{

    private String codCliente;
    private String telefono;
    private Vehiculo vehiculo[]=new Vehiculo[5];

    public Cliente() {
    }

 
    

}
