/************
 * Autor: Zavaleta Cruz Jonathan Alexis
 * fecha de creación: 15/05/2023
 * fecha modificación:
 * Descripción: se creo la clase empleado
 * 
 */
package entity;


public class Empleado extends Persona{
    private String codEmpleado;
    private String seccion;
    private int ventas;
    private Cliente cliente[]=new Cliente[5];

    public Empleado() {
    }

  
    
    
    
}
