/************
 * Autor: Zavaleta Cruz Jonathan Alexis
 * fecha de creación: 15/05/2023
 * fecha modificación:
 * Descripción: se creo la clase persona
 * 
 */
package entity;


public class Persona {
    private String nombre;
    private int edad;
    private String IDE;
    
}
